VIVO-369: Fixed line spacing with classes in class groups.

--- a/webapp/web/css/browseClassGroups.css
+++ b/webapp/web/css/browseClassGroups.css
@@ -87,18 +87,16 @@ ul#classes-in-classgroup li {
     width: 100%;
     border-bottom: 1px solid #dde4e3;
     font-size: 14px;
-    height: 35px;
-    line-height: 35px;
 }
 ul#classes-in-classgroup li:last-child {
     border-bottom: none
 }
 ul#classes-in-classgroup a {
     display: block;
-    padding-left: 15px;
-    height: 35px;
     color: #5e6363;
     text-decoration: none;
+    padding: .5em 0 .5em 0.938em;
+    line-height: 1.5em;
 }
 ul#classes-in-classgroup .count-individuals {
     font-size: 12px;
